--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "core-js": "^3.8.0",
     "reflect-metadata": "^0.1.13",
     "vue": "^3.0.4",
-    "vue-class-component": "^8.0.0-rc.1"
+    "vue-class-component": "^8.0.0-rc.1",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@types/core-js": "^2.5.4",
     "@vue/compiler-sfc": "^3.0.4",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
